recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:12: error: not found: value ree
    ree(steps-1, length*shrink, angle, shrink)
    ^